Fixed issues on the about page and made the text wrap around the image. Now the page will look correct on tablets and phones Also adjusted iframes on video page so they are the correct sizes and can scale with size of window.  Added a back-to-top feature on videos page as well

--- a/videos.css
+++ b/videos.css
@@ -134,3 +134,46 @@ p, h1 {
     /* background: white; */
     color: #4b4b4b;
   }
+
+  #backToTop
+  {
+    position: fixed;
+    left: 2vw;
+    top: 7vh;
+    text-decoration: none;
+    color: #dddddd;
+    
+  }
+
+
+
+
+  /**************************************************************/
+  .fixed_aspect_wrapper {
+    /* anything or nothing, it doesn't matter */
+    width: 95%;
+    /* only need if other rulesets give this padding */
+    padding: 0;
+    padding-left: 1.5vw;
+    padding-bottom: 10px;
+  }
+  .fixed_aspect_padder {
+    height: 0;
+    /* last padding dimension is (100 * height / width) of item to be scaled */
+    padding: 0 0 56.25%;
+    position: relative;
+    /* only need next 2 rules if other rulesets change these */
+    margin: 0;
+    /* padding-left: 10px; */
+    width: auto;
+  }
+  .iframe_fixed_aspect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* for demo */
+    border: 0;
+    background: white;
+  }
